mylang.output
Terminals unused in grammar

   GET_FLOPS_SPEED
   INVALID


State 38 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce
State 60 conflicts: 3 shift/reduce
State 63 conflicts: 2 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: Function_declaration Start
    2      | Object_declaration Start
    3      | Function_declaration
    4      | Object_declaration

    5 Object_declaration: Dec_specifier IDENTIFIER ASGN_OP postfix_expression SEMI_COLON
    6                   | Dec_specifier IDENTIFIER ASGN_OP object_expression SEMI_COLON
    7                   | Dec_specifier IDENTIFIER SEMI_COLON
    8                   | Dec_specifier array_expression ASGN_OP array_initialiser SEMI_COLON
    9                   | Dec_specifier array_expression SEMI_COLON

   10 Dec_specifier: type_specifier pointer
   11              | type_specifier

   12 array_initialiser: LEFT_CURLY array_initialiser RIGHT_CURLY
   13                  | LEFT_CURLY array_initialiser RIGHT_CURLY COMMA array_initialiser
   14                  | expression

   15 Function_declaration: Dec_specifier IDENTIFIER LEFT_PARENTHESIS argument_list RIGHT_PARENTHESIS body_or_proto
   16                     | Dec_specifier IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS body_or_proto

   17 body_or_proto: LEFT_CURLY statement_list RIGHT_CURLY
   18              | SEMI_COLON

   19 argument_list: Dec_specifier IDENTIFIER COMMA argument_list
   20              | Dec_specifier IDENTIFIER

   21 type_specifier: INT
   22               | VOID
   23               | FLOAT
   24               | CHAR
   25               | PROC
   26               | CLUST
   27               | JB
   28               | MEM
   29               | LNK

   30 pointer: MUL_OP pointer
   31        | MUL_OP

   32 statement_list: Statement statement_list
   33               | Statement

   34 Statement: LEFT_CURLY statement_list RIGHT_CURLY
   35          | Expression_statement
   36          | Selection_statement
   37          | Iteration_statement
   38          | Jump_statement
   39          | Object_declaration

   40 Jump_statement: RETURN expression
   41               | CONTINUE SEMI_COLON
   42               | BREAK SEMI_COLON

   43 Selection_statement: IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY statement_list RIGHT_CURLY ELSE LEFT_CURLY statement_list RIGHT_CURLY
   44                    | IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY statement_list RIGHT_CURLY

   45 Iteration_statement: WHILE LEFT_PARENTHESIS expression RIGHT_PARENTHESIS Statement
   46                    | FOR LEFT_PARENTHESIS Expression_statement Expression_statement RIGHT_PARENTHESIS Statement
   47                    | FOR LEFT_PARENTHESIS Expression_statement Expression_statement expression RIGHT_PARENTHESIS Statement

   48 Expression_statement: expression SEMI_COLON
   49                     | SEMI_COLON

   50 expression: assignment_expression
   51           | assignment_expression COMMA expression

   52 assignment_expression: unary_expression ASGN_OP assignment_expression
   53                      | conditional_expression
   54                      | object_expression

   55 conditional_expression: logical_or_expression

   56 logical_or_expression: logical_and_expression OR_OP logical_or_expression
   57                      | logical_and_expression

   58 logical_and_expression: bitwise_or_expression AND_OP logical_and_expression
   59                       | bitwise_or_expression

   60 bitwise_or_expression: bitwise_xor_expression BTW_OR bitwise_or_expression
   61                      | bitwise_xor_expression

   62 bitwise_xor_expression: and_expression
   63                       | and_expression XOR_OP bitwise_xor_expression

   64 and_expression: equality_expression
   65               | equality_expression AMPERSAND and_expression

   66 equality_expression: relational_expression
   67                    | relational_expression EQ_OP equality_expression
   68                    | relational_expression NE_OP equality_expression

   69 relational_expression: shift_expression
   70                      | shift_expression LESS_THAN relational_expression
   71                      | shift_expression GREATER_THAN relational_expression
   72                      | shift_expression LE_OP relational_expression
   73                      | shift_expression GE_OP relational_expression

   74 shift_expression: additive_expression
   75                 | additive_expression LEFT_OP shift_expression
   76                 | additive_expression RIGHT_OP shift_expression

   77 additive_expression: multiplicative_expression
   78                    | multiplicative_expression PLUS additive_expression
   79                    | multiplicative_expression MINUS additive_expression

   80 multiplicative_expression: unary_expression
   81                          | multiplicative_expression MUL_OP unary_expression
   82                          | multiplicative_expression DIV_OP unary_expression
   83                          | multiplicative_expression MOD_OP unary_expression

   84 unary_expression: postfix_expression
   85                 | INC_OP unary_expression
   86                 | DEC_OP unary_expression
   87                 | unary_operator unary_expression

   88 unary_operator: PLUS
   89               | MINUS
   90               | BTW_NOT
   91               | NOT_OP
   92               | MUL_OP
   93               | AMPERSAND

   94 postfix_expression: primary_expression
   95                   | array_expression
   96                   | function_expression
   97                   | postfix_expression INC_OP
   98                   | postfix_expression DEC_OP

   99 array_expression: array_expression LEFT_BRACKET expression RIGHT_BRACKET
  100                 | primary_expression LEFT_BRACKET expression RIGHT_BRACKET

  101 primary_expression: IDENTIFIER DEREF_OP IDENTIFIER
  102                   | IDENTIFIER
  103                   | CONSTANT
  104                   | STRING_LITERAL
  105                   | LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

  106 object_expression: link_object
  107                  | memory_object
  108                  | job_object
  109                  | cluster_object

  110 cluster_object: CLUSTER LEFT_PARENTHESIS proc_arr_arg COMMA topology_arg COMMA link_band_arg COMMA link_cap_arg narp
  111               | processor_object

  112 proc_arr_arg: PROCESSORS ASGN_OP IDENTIFIER
  113             | PROCESSORS ASGN_OP LEFT_BRACKET cluster_list RIGHT_BRACKET
  114             | IDENTIFIER
  115             | LEFT_BRACKET cluster_list RIGHT_BRACKET

  116 cluster_list: cluster_object COMMA cluster_list
  117             | cluster_object

  118 topology_arg: TOPOLOGY ASGN_OP STRING_LITERAL
  119             | STRING_LITERAL

  120 link_band_arg: LINK_BANDWIDTH ASGN_OP conditional_expression
  121              | conditional_expression

  122 link_cap_arg: LINK_CAPACITY ASGN_OP conditional_expression
  123             | conditional_expression

  124 narp: COMMA conditional_expression RIGHT_PARENTHESIS
  125     | COMMA NAME ASGN_OP conditional_expression RIGHT_PARENTHESIS
  126     | RIGHT_PARENTHESIS

  127 processor_object: PROCESSOR LEFT_PARENTHESIS isa_args COMMA Clock_args COMMA mem_args narp

  128 isa_args: ISA ASGN_OP PROC_TYPE
  129         | PROC_TYPE

  130 Clock_args: CLOCK_SPEED ASGN_OP CONSTANT
  131           | CONSTANT

  132 mem_args: MEM1 ASGN_OP memory COLON MEM2 ASGN_OP memory
  133         | MEM1 ASGN_OP memory COLON memory
  134         | MEM1 ASGN_OP memory
  135         | memory COLON MEM2 ASGN_OP memory
  136         | memory COLON memory
  137         | memory

  138 memory: memory_object
  139       | IDENTIFIER

  140 link_object: LINK LEFT_PARENTHESIS start_args COMMA end_args COMMA link_band_arg COMMA link_cap_arg narp

  141 start_args: START_POINT ASGN_OP conditional_expression
  142           | conditional_expression

  143 end_args: END_POINT ASGN_OP conditional_expression
  144         | conditional_expression

  145 memory_object: MEMORY LEFT_PARENTHESIS mem_type_args COMMA mem_size_args narp

  146 mem_type_args: MEMORY_TYPE ASGN_OP MEM_TYPES
  147              | MEM_TYPES

  148 mem_size_args: MEMORY_SIZE ASGN_OP conditional_expression
  149              | conditional_expression

  150 job_object: JOB LEFT_PARENTHESIS job_id_args COMMA flops_args COMMA deadline_args COMMA mem_required_args COMMA affinity_args RIGHT_PARENTHESIS

  151 job_id_args: JOB_ID ASGN_OP conditional_expression
  152            | conditional_expression

  153 flops_args: FLOPS_REQUIRED ASGN_OP conditional_expression
  154           | conditional_expression

  155 deadline_args: DEADLINE ASGN_OP conditional_expression
  156              | conditional_expression

  157 mem_required_args: MEM_REQUIRED ASGN_OP conditional_expression
  158                  | conditional_expression

  159 affinity_args: AFFINITY ASGN_OP LEFT_BRACKET list RIGHT_BRACKET
  160              | LEFT_BRACKET list RIGHT_BRACKET

  161 list: CONSTANT
  162     | CONSTANT COMMA list

  163 function_expression: RUN LEFT_PARENTHESIS cluster_list RIGHT_PARENTHESIS
  164                    | WAIT LEFT_PARENTHESIS RIGHT_PARENTHESIS
  165                    | DISCARD_JOB LEFT_PARENTHESIS job_list RIGHT_PARENTHESIS
  166                    | STOP LEFT_PARENTHESIS IDENTIFIER RIGHT_PARENTHESIS
  167                    | IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS
  168                    | IDENTIFIER LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
  169                    | IDENTIFIER DOT object_function

  170 object_function: processor_function
  171                | job_function
  172                | memory_function
  173                | cluster_function

  174 memory_function: GET_AVAILABLE_MEMORY LEFT_PARENTHESIS RIGHT_PARENTHESIS

  175 job_function: GET_JOB_AFFINITY LEFT_PARENTHESIS RIGHT_PARENTHESIS
  176             | GET_JOB_MEMORY LEFT_PARENTHESIS RIGHT_PARENTHESIS
  177             | GET_FLOPS LEFT_PARENTHESIS RIGHT_PARENTHESIS
  178             | GET_DEADLINE LEFT_PARENTHESIS RIGHT_PARENTHESIS

  179 processor_function: IS_RUNNING LEFT_PARENTHESIS RIGHT_PARENTHESIS
  180                   | SUBMIT_JOBS LEFT_PARENTHESIS job_list RIGHT_PARENTHESIS
  181                   | GET_CLOCK_SPEED LEFT_PARENTHESIS RIGHT_PARENTHESIS
  182                   | GET_PROC_TYPE LEFT_PARENTHESIS RIGHT_PARENTHESIS
  183                   | IS_PROCESSOR LEFT_PARENTHESIS RIGHT_PARENTHESIS

  184 cluster_function: GET_PROCESSOR LEFT_PARENTHESIS RIGHT_PARENTHESIS
  185                 | GET_PROCESSOR LEFT_PARENTHESIS primary_expression RIGHT_PARENTHESIS

  186 job_list: IDENTIFIER COMMA job_list
  187         | IDENTIFIER
  188         | job_object COMMA job_list
  189         | job_object


Terminals, with rules where they appear

$end (0) 0
error (256)
BREAK (258) 42
CHAR (259) 24
CONTINUE (260) 41
ELSE (261) 43
FLOAT (262) 23
FOR (263) 46 47
IF (264) 43 44
INT (265) 21
RETURN (266) 40
VOID (267) 22
WHILE (268) 45
PROC (269) 25
LNK (270) 29
JB (271) 27
COLON (272) 132 133 135 136
CLUST (273) 26
CLUSTER (274) 110
PROCESSOR (275) 127
ISA (276) 128
PROC_TYPE (277) 128 129
CLOCK_SPEED (278) 130
MEM1 (279) 132 133 134
MEM2 (280) 132 135
NAME (281) 125
TOPOLOGY (282) 118
LINK_BANDWIDTH (283) 120
LINK_CAPACITY (284) 122
LINK (285) 140
START_POINT (286) 141
END_POINT (287) 143
MEMORY_TYPE (288) 146
MEMORY_SIZE (289) 148
JOB (290) 150
JOB_ID (291) 151
FLOPS_REQUIRED (292) 153
DEADLINE (293) 155
MEM_REQUIRED (294) 157
AFFINITY (295) 159
RUN (296) 163
WAIT (297) 164
DISCARD_JOB (298) 165
STOP (299) 166
GET_AVAILABLE_MEMORY (300) 174
GET_JOB_AFFINITY (301) 175
GET_JOB_MEMORY (302) 176
GET_FLOPS (303) 177
GET_DEADLINE (304) 178
IS_RUNNING (305) 179
SUBMIT_JOBS (306) 180
GET_FLOPS_SPEED (307)
GET_PROC_TYPE (308) 182
IS_PROCESSOR (309) 183
GET_PROCESSOR (310) 184 185
MEM (311) 28
IDENTIFIER (312) 5 6 7 15 16 19 20 101 102 112 114 139 166 167 168
    169 186 187
CONSTANT (313) 103 130 131 161 162
STRING_LITERAL (314) 104 118 119
RIGHT_OP (315) 76
LEFT_OP (316) 75
INC_OP (317) 85 97
DEC_OP (318) 86 98
AND_OP (319) 58
OR_OP (320) 56
LE_OP (321) 72
GE_OP (322) 73
EQ_OP (323) 67
NE_OP (324) 68
SEMI_COLON (325) 5 6 7 8 9 18 41 42 48 49
LEFT_CURLY (326) 12 13 17 34 43 44
RIGHT_CURLY (327) 12 13 17 34 43 44
COMMA (328) 13 19 51 110 116 124 125 127 140 145 150 162 186 188
ASGN_OP (329) 5 6 8 52 112 113 118 120 122 125 128 130 132 133 134
    135 141 143 146 148 151 153 155 157 159
LEFT_PARENTHESIS (330) 15 16 43 44 45 46 47 105 110 127 140 145 150
    163 164 165 166 167 168 174 175 176 177 178 179 180 181 182 183
    184 185
RIGHT_PARENTHESIS (331) 15 16 43 44 45 46 47 105 124 125 126 150 163
    164 165 166 167 168 174 175 176 177 178 179 180 181 182 183 184
    185
LEFT_BRACKET (332) 99 100 113 115 159 160
RIGHT_BRACKET (333) 99 100 113 115 159 160
DOT (334) 169
AMPERSAND (335) 65 93
NOT_OP (336) 91
BTW_NOT (337) 90
MINUS (338) 79 89
PLUS (339) 78 88
MUL_OP (340) 30 31 81 92
DIV_OP (341) 82
MOD_OP (342) 83
LESS_THAN (343) 70
GREATER_THAN (344) 71
XOR_OP (345) 63
BTW_OR (346) 60
INVALID (347)
MEMORY (348) 145
PROCESSORS (349) 112 113
DEREF_OP (350) 101
GET_CLOCK_SPEED (351) 181
MEM_TYPES (352) 146 147


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
Start (99)
    on left: 1 2 3 4, on right: 0 1 2
Object_declaration (100)
    on left: 5 6 7 8 9, on right: 2 4 39
Dec_specifier (101)
    on left: 10 11, on right: 5 6 7 8 9 15 16 19 20
array_initialiser (102)
    on left: 12 13 14, on right: 8 12 13
Function_declaration (103)
    on left: 15 16, on right: 1 3
body_or_proto (104)
    on left: 17 18, on right: 15 16
argument_list (105)
    on left: 19 20, on right: 15 19
type_specifier (106)
    on left: 21 22 23 24 25 26 27 28 29, on right: 10 11
pointer (107)
    on left: 30 31, on right: 10 30
statement_list (108)
    on left: 32 33, on right: 17 32 34 43 44
Statement (109)
    on left: 34 35 36 37 38 39, on right: 32 33 45 46 47
Jump_statement (110)
    on left: 40 41 42, on right: 38
Selection_statement (111)
    on left: 43 44, on right: 36
Iteration_statement (112)
    on left: 45 46 47, on right: 37
Expression_statement (113)
    on left: 48 49, on right: 35 46 47
expression (114)
    on left: 50 51, on right: 14 40 43 44 45 47 48 51 99 100 105 168
assignment_expression (115)
    on left: 52 53 54, on right: 50 51 52
conditional_expression (116)
    on left: 55, on right: 53 120 121 122 123 124 125 141 142 143 144
    148 149 151 152 153 154 155 156 157 158
logical_or_expression (117)
    on left: 56 57, on right: 55 56
logical_and_expression (118)
    on left: 58 59, on right: 56 57 58
bitwise_or_expression (119)
    on left: 60 61, on right: 58 59 60
bitwise_xor_expression (120)
    on left: 62 63, on right: 60 61 63
and_expression (121)
    on left: 64 65, on right: 62 63 65
equality_expression (122)
    on left: 66 67 68, on right: 64 65 67 68
relational_expression (123)
    on left: 69 70 71 72 73, on right: 66 67 68 70 71 72 73
shift_expression (124)
    on left: 74 75 76, on right: 69 70 71 72 73 75 76
additive_expression (125)
    on left: 77 78 79, on right: 74 75 76 78 79
multiplicative_expression (126)
    on left: 80 81 82 83, on right: 77 78 79 81 82 83
unary_expression (127)
    on left: 84 85 86 87, on right: 52 80 81 82 83 85 86 87
unary_operator (128)
    on left: 88 89 90 91 92 93, on right: 87
postfix_expression (129)
    on left: 94 95 96 97 98, on right: 5 84 97 98
array_expression (130)
    on left: 99 100, on right: 8 9 95 99
primary_expression (131)
    on left: 101 102 103 104 105, on right: 94 100 185
object_expression (132)
    on left: 106 107 108 109, on right: 6 54
cluster_object (133)
    on left: 110 111, on right: 109 116 117
proc_arr_arg (134)
    on left: 112 113 114 115, on right: 110
cluster_list (135)
    on left: 116 117, on right: 113 115 116 163
topology_arg (136)
    on left: 118 119, on right: 110
link_band_arg (137)
    on left: 120 121, on right: 110 140
link_cap_arg (138)
    on left: 122 123, on right: 110 140
narp (139)
    on left: 124 125 126, on right: 110 127 140 145
processor_object (140)
    on left: 127, on right: 111
isa_args (141)
    on left: 128 129, on right: 127
Clock_args (142)
    on left: 130 131, on right: 127
mem_args (143)
    on left: 132 133 134 135 136 137, on right: 127
memory (144)
    on left: 138 139, on right: 132 133 134 135 136 137
link_object (145)
    on left: 140, on right: 106
start_args (146)
    on left: 141 142, on right: 140
end_args (147)
    on left: 143 144, on right: 140
memory_object (148)
    on left: 145, on right: 107 138
mem_type_args (149)
    on left: 146 147, on right: 145
mem_size_args (150)
    on left: 148 149, on right: 145
job_object (151)
    on left: 150, on right: 108 188 189
job_id_args (152)
    on left: 151 152, on right: 150
flops_args (153)
    on left: 153 154, on right: 150
deadline_args (154)
    on left: 155 156, on right: 150
mem_required_args (155)
    on left: 157 158, on right: 150
affinity_args (156)
    on left: 159 160, on right: 150
list (157)
    on left: 161 162, on right: 159 160 162
function_expression (158)
    on left: 163 164 165 166 167 168 169, on right: 96
object_function (159)
    on left: 170 171 172 173, on right: 169
memory_function (160)
    on left: 174, on right: 172
job_function (161)
    on left: 175 176 177 178, on right: 171
processor_function (162)
    on left: 179 180 181 182 183, on right: 170
cluster_function (163)
    on left: 184 185, on right: 173
job_list (164)
    on left: 186 187 188 189, on right: 165 180 186 188


State 0

    0 $accept: . Start $end

    CHAR   shift, and go to state 1
    FLOAT  shift, and go to state 2
    INT    shift, and go to state 3
    VOID   shift, and go to state 4
    PROC   shift, and go to state 5
    LNK    shift, and go to state 6
    JB     shift, and go to state 7
    CLUST  shift, and go to state 8
    MEM    shift, and go to state 9

    Start                 go to state 10
    Object_declaration    go to state 11
    Dec_specifier         go to state 12
    Function_declaration  go to state 13
    type_specifier        go to state 14


State 1

   24 type_specifier: CHAR .

    $default  reduce using rule 24 (type_specifier)


State 2

   23 type_specifier: FLOAT .

    $default  reduce using rule 23 (type_specifier)


State 3

   21 type_specifier: INT .

    $default  reduce using rule 21 (type_specifier)


State 4

   22 type_specifier: VOID .

    $default  reduce using rule 22 (type_specifier)


State 5

   25 type_specifier: PROC .

    $default  reduce using rule 25 (type_specifier)


State 6

   29 type_specifier: LNK .

    $default  reduce using rule 29 (type_specifier)


State 7

   27 type_specifier: JB .

    $default  reduce using rule 27 (type_specifier)


State 8

   26 type_specifier: CLUST .

    $default  reduce using rule 26 (type_specifier)


State 9

   28 type_specifier: MEM .

    $default  reduce using rule 28 (type_specifier)


State 10

    0 $accept: Start . $end

    $end  shift, and go to state 15


State 11

    2 Start: Object_declaration . Start
    4      | Object_declaration .

    CHAR   shift, and go to state 1
    FLOAT  shift, and go to state 2
    INT    shift, and go to state 3
    VOID   shift, and go to state 4
    PROC   shift, and go to state 5
    LNK    shift, and go to state 6
    JB     shift, and go to state 7
    CLUST  shift, and go to state 8
    MEM    shift, and go to state 9

    $default  reduce using rule 4 (Start)

    Start                 go to state 16
    Object_declaration    go to state 11
    Dec_specifier         go to state 12
    Function_declaration  go to state 13
    type_specifier        go to state 14


State 12

    5 Object_declaration: Dec_specifier . IDENTIFIER ASGN_OP postfix_expression SEMI_COLON
    6                   | Dec_specifier . IDENTIFIER ASGN_OP object_expression SEMI_COLON
    7                   | Dec_specifier . IDENTIFIER SEMI_COLON
    8                   | Dec_specifier . array_expression ASGN_OP array_initialiser SEMI_COLON
    9                   | Dec_specifier . array_expression SEMI_COLON
   15 Function_declaration: Dec_specifier . IDENTIFIER LEFT_PARENTHESIS argument_list RIGHT_PARENTHESIS body_or_proto
   16                     | Dec_specifier . IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS body_or_proto

    IDENTIFIER        shift, and go to state 17
    CONSTANT          shift, and go to state 18
    STRING_LITERAL    shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20

    array_expression    go to state 21
    primary_expression  go to state 22


State 13

    1 Start: Function_declaration . Start
    3      | Function_declaration .

    CHAR   shift, and go to state 1
    FLOAT  shift, and go to state 2
    INT    shift, and go to state 3
    VOID   shift, and go to state 4
    PROC   shift, and go to state 5
    LNK    shift, and go to state 6
    JB     shift, and go to state 7
    CLUST  shift, and go to state 8
    MEM    shift, and go to state 9

    $default  reduce using rule 3 (Start)

    Start                 go to state 23
    Object_declaration    go to state 11
    Dec_specifier         go to state 12
    Function_declaration  go to state 13
    type_specifier        go to state 14


State 14

   10 Dec_specifier: type_specifier . pointer
   11              | type_specifier .

    MUL_OP  shift, and go to state 24

    $default  reduce using rule 11 (Dec_specifier)

    pointer  go to state 25


State 15

    0 $accept: Start $end .

    $default  accept


State 16

    2 Start: Object_declaration Start .

    $default  reduce using rule 2 (Start)


State 17

    5 Object_declaration: Dec_specifier IDENTIFIER . ASGN_OP postfix_expression SEMI_COLON
    6                   | Dec_specifier IDENTIFIER . ASGN_OP object_expression SEMI_COLON
    7                   | Dec_specifier IDENTIFIER . SEMI_COLON
   15 Function_declaration: Dec_specifier IDENTIFIER . LEFT_PARENTHESIS argument_list RIGHT_PARENTHESIS body_or_proto
   16                     | Dec_specifier IDENTIFIER . LEFT_PARENTHESIS RIGHT_PARENTHESIS body_or_proto
  101 primary_expression: IDENTIFIER . DEREF_OP IDENTIFIER
  102                   | IDENTIFIER .

    SEMI_COLON        shift, and go to state 26
    ASGN_OP           shift, and go to state 27
    LEFT_PARENTHESIS  shift, and go to state 28
    DEREF_OP          shift, and go to state 29

    $default  reduce using rule 102 (primary_expression)


State 18

  103 primary_expression: CONSTANT .

    $default  reduce using rule 103 (primary_expression)


State 19

  104 primary_expression: STRING_LITERAL .

    $default  reduce using rule 104 (primary_expression)


State 20

  105 primary_expression: LEFT_PARENTHESIS . expression RIGHT_PARENTHESIS

    CLUSTER           shift, and go to state 30
    PROCESSOR         shift, and go to state 31
    LINK              shift, and go to state 32
    JOB               shift, and go to state 33
    RUN               shift, and go to state 34
    WAIT              shift, and go to state 35
    DISCARD_JOB       shift, and go to state 36
    STOP              shift, and go to state 37
    IDENTIFIER        shift, and go to state 38
    CONSTANT          shift, and go to state 18
    STRING_LITERAL    shift, and go to state 19
    INC_OP            shift, and go to state 39
    DEC_OP            shift, and go to state 40
    LEFT_PARENTHESIS  shift, and go to state 20
    AMPERSAND         shift, and go to state 41
    NOT_OP            shift, and go to state 42
    BTW_NOT           shift, and go to state 43
    MINUS             shift, and go to state 44
    PLUS              shift, and go to state 45
    MUL_OP            shift, and go to state 46
    MEMORY            shift, and go to state 47

    expression                 go to state 48
    assignment_expression      go to state 49
    conditional_expression     go to state 50
    logical_or_expression      go to state 51
    logical_and_expression     go to state 52
    bitwise_or_expression      go to state 53
    bitwise_xor_expression     go to state 54
    and_expression             go to state 55
    equality_expression        go to state 56
    relational_expression      go to state 57
    shift_expression           go to state 58
    additive_expression        go to state 59
    multiplicative_expression  go to state 60
    unary_expression           go to state 61
    unary_operator             go to state 62
    postfix_expression         go to state 63
    array_expression           go to state 64
    primary_expression         go to state 65
    object_expression          go to state 66
    cluster_object             go to state 67
    processor_object           go to state 68
    link_object                go to state 69
    memory_object              go to state 70
    job_object                 go to state 71
    function_expression        go to state 72


State 21

    8 Object_declaration: Dec_specifier array_expression . ASGN_OP array_initialiser SEMI_COLON
    9                   | Dec_specifier array_expression . SEMI_COLON
   99 array_expression: array_expression . LEFT_BRACKET expression RIGHT_BRACKET

    SEMI_COLON    shift, and go to state 73
    ASGN_OP       shift, and go to state 74
    LEFT_BRACKET  shift, and go to state 75


State 22

  100 array_expression: primary_expression . LEFT_BRACKET expression RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 76


State 23

    1 Start: Function_declaration Start .

    $default  reduce using rule 1 (Start)


State 24

   30 pointer: MUL_OP . pointer
   31        | MUL_OP .

    MUL_OP  shift, and go to state 24

    $default  reduce using rule 31 (pointer)

    pointer  go to state 77


State 25

   10 Dec_specifier: type_specifier pointer .

    $default  reduce using rule 10 (Dec_specifier)


State 26

    7 Object_declaration: Dec_specifier IDENTIFIER SEMI_COLON .

    $default  reduce using rule 7 (Object_declaration)


State 27

    5 Object_declaration: Dec_specifier IDENTIFIER ASGN_OP . postfix_expression SEMI_COLON
    6                   | Dec_specifier IDENTIFIER ASGN_OP . object_expression SEMI_COLON

    CLUSTER           shift, and go to state 30
    PROCESSOR         shift, and go to state 31
    LINK              shift, and go to state 32
    JOB               shift, and go to state 33
    RUN               shift, and go to state 34
    WAIT              shift, and go to state 35
    DISCARD_JOB       shift, and go to state 36
    STOP              shift, and go to state 37
    IDENTIFIER        shift, and go to state 38
    CONSTANT          shift, and go to state 18
    STRING_LITERAL    shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 20
    MEMORY            shift, and go to state 47

    postfix_expression   go to state 78
    array_expression     go to state 64
    primary_expression   go to state 65
    object_expression    go to state 79
    cluster_object       go to state 67
    processor_object     go to state 68
    link_object          go to state 69
    memory_object        go to state 70
    job_object           go to state 71
    function_expression  go to state 72


State 28

   15 Function_declaration: Dec_specifier IDENTIFIER LEFT_PARENTHESIS . argument_list RIGHT_PARENTHESIS body_or_proto
   16                     | Dec_specifier IDENTIFIER LEFT_PARENTHESIS . RIGHT_PARENTHESIS body_or_proto

    CHAR               shift, and go to state 1
    FLOAT              shift, and go to state 2
    INT                shift, and go to state 3
    VOID               shift, and go to state 4
    PROC               shift, and go to state 5
    LNK                shift, and go to state 6
    JB                 shift, and go to state 7
    CLUST              shift, and go to state 8
    MEM                shift, and go to state 9
    RIGHT_PARENTHESIS  shift, and go to state 80

    Dec_specifier   go to state 81
    argument_list   go to state 82
    type_specifier  go to state 14


State 29

  101 primary_expression: IDENTIFIER DEREF_OP . IDENTIFIER

    IDENTIFIER  shift, and go to state 83


State 30

  110 cluster_object: CLUSTER . LEFT_PARENTHESIS proc_arr_arg COMMA topology_arg COMMA link_band_arg COMMA link_cap_arg narp

    LEFT_PARENTHESIS  shift, and go to state 84


State 31

  127 processor_object: PROCESSOR . LEFT_PARENTHESIS isa_args COMMA Clock_args COMMA mem_args narp

    LEFT_PARENTHESIS  shift, and go to state 85


State 32

  140 link_object: LINK . LEFT_PARENTHESIS start_args COMMA end_args COMMA link_band_arg COMMA link_cap_arg narp

    LEFT_PARENTHESIS  shift, and go to state 86


State 33

  150 job_object: JOB . LEFT_PARENTHESIS job_id_args COMMA flops_args COMMA deadline_args COMMA mem_required_args COMMA affinity_args RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 87


State 34

  163 function_expression: RUN . LEFT_PARENTHESIS cluster_list RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 88


State 35

  164 function_expression: WAIT . LEFT_PARENTHESIS RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 89


State 36

  165 function_expression: DISCARD_JOB . LEFT_PARENTHESIS job_list RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 90


State 37

  166 function_expression: STOP . LEFT_PARENTHESIS IDENTIFIER RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 91


State 38

  101 primary_expression: IDENTIFIER . DEREF_OP IDENTIFIER
  102                   | IDENTIFIER .
  167 function_expression: IDENTIFIER . LEFT_PARENTHESIS RIGHT_PARENTHESIS
  168                    | IDENTIFIER . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
  169                    | IDENTIFIER . DOT object_function

    LEFT_PARENTHESIS  shift, and go to state 92
    DOT               shift, and go to state 93
    DEREF_OP          shift, and go to state 29

    LEFT_PARENTHESIS  [reduce using rule 102 (primary_expression)]
    $default          reduce using rule 102 (primary_expression)


State 39

   85 unary_expression: INC_OP . unary_expression

    RUN               shift, and go to state 34
    WAIT              shift, and go to state 35
    DISCARD_JOB       shift, and go to state 36
    STOP              shift, and go to state 37
    IDENTIFIER        shift, and go to state 38
    CONSTANT          shift, and go to state 18
    STRING_LITERAL    shift, and go to state 19
    INC_OP            shift, and go to state 39
    DEC_OP            shift, and go to state 40
    LEFT_PARENTHESIS  shift, and go to state 20
    AMPERSAND         shift, and go to state 41
    NOT_OP            shift, and go to state 42
    BTW_NOT           shift, and go to state 43
    MINUS             shift, and go to state 44
    PLUS              shift, and go to state 45
    MUL_OP            shift, and go to state 46

    unary_expression     go to state 94
    unary_operator       go to state 62
    postfix_expression   go to state 63
    array_expression     go to state 64
    primary_expression   go to state 65
    function_expression  go to state 72


State 40

   86 unary_expression: DEC_OP . unary_expression

    RUN               shift, and go to state 34
    WAIT              shift, and go to state 35
    DISCARD_JOB       shift, and go to state 36
    STOP              shift, and go to state 37
    IDENTIFIER        shift, and go to state 38
    CONSTANT          shift, and go to state 18
    STRING_LITERAL    shift, and go to state 19
    INC_OP            shift, and go to state 39
    DEC_OP            shift, and go to state 40
    LEFT_PARENTHESIS  shift, and go to state 20
    AMPERSAND         shift, and go to state 41
    NOT_OP            shift, and go to state 42
    BTW_NOT           shift, and go to state 43
    MINUS             shift, and go to state 44
    PLUS              shift, and go to state 45
    MUL_OP            shift, and go to state 46

    unary_expression     go to state 95
    unary_operator       go to state 62
    postfix_expression   go to state 63
    array_expression     go to state 64
    primary_expression   go to state 65
    function_expression  go to state 72


State 41

   93 unary_operator: AMPERSAND .

    $default  reduce using rule 93 (unary_operator)


State 42

   91 unary_operator: NOT_OP .

    $default  reduce using rule 91 (unary_operator)


State 43

   90 unary_operator: BTW_NOT .

    $default  reduce using rule 90 (unary_operator)


State 44

   89 unary_operator: MINUS .

    $default  reduce using rule 89 (unary_operator)


State 45

   88 unary_operator: PLUS .

    $default  reduce using rule 88 (unary_operator)


State 46

   92 unary_operator: MUL_OP .

    $default  reduce using rule 92 (unary_operator)


State 47

  145 memory_object: MEMORY . LEFT_PARENTHESIS mem_type_args COMMA mem_size_args narp

    LEFT_PARENTHESIS  shift, and go to state 96


State 48

  105 primary_expression: LEFT_PARENTHESIS expression . RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 97


State 49

   50 expression: assignment_expression .
   51           | assignment_expression . COMMA expression

    COMMA  shift, and go to state 98

    $default  reduce using rule 50 (expression)


State 50

   53 assignment_expression: conditional_expression .

    $default  reduce using rule 53 (assignment_expression)


State 51

   55 conditional_expression: logical_or_expression .

    $default  reduce using rule 55 (conditional_expression)

